--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "adm-zip": "^0.4.11",
     "angular-contentful-service": "^1.3.2",
+    "bootstrap": "^4.1.3",
     "contentful": "^7.0.0",
     "core-js": "^2.5.4",
     "hoek": "^5.0.3",
