--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "adm-zip": "^0.4.11",
     "angular-contentful-service": "^1.3.2",
     "bootstrap": "^4.1.3",
-    "contentful": "^7.0.0",
+    "contentful": "^7.0.3",
+    "contentful-management": "^5.3.2",
     "core-js": "^2.5.4",
     "hoek": "^5.0.3",
     "ngx-bootstrap": "^3.0.1",
