--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": false,
+    "forceConsistentCasingInFileNames": true,
+    //"noImplicitReturns": true,
+    //"strict": true,
+    //"noUnusedLocals": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
