--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.9",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.9",
     "@angular/compiler": "^6.1.9",
     "@angular/core": "^6.1.9",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "^6.1.9",
     "@angular/http": "^6.1.9",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.9",
     "@angular/platform-browser-dynamic": "^6.1.9",
     "@angular/router": "^6.1.9",
@@ -28,6 +31,8 @@
     "core-js": "^2.5.4",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
+    "log4js": "^3.0.6",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
     "npm": "^6.4.1",
     "popper.js": "^1.14.4",
