--- a/package.json
+++ b/package.json
@@ -13,44 +13,47 @@
   "dependencies": {
     "@angular/animations": "^6.1.10",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.9",
-    "@angular/compiler": "^6.1.9",
-    "@angular/core": "^6.1.9",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^6.1.9",
-    "@angular/http": "^6.1.9",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/flex-layout": "^6.0.0-beta.16",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.9",
-    "@angular/platform-browser-dynamic": "^6.1.9",
-    "@angular/router": "^6.1.9",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/pwa": "^0.10.3",
+    "@angular/router": "^6.1.10",
     "adm-zip": "^0.4.11",
+    "angular": "^1.7.5",
     "angular-contentful-service": "^1.3.2",
     "bootstrap": "^4.1.3",
-    "contentful": "^7.0.4",
-    "contentful-management": "^5.3.3",
+    "contentful": "^7.0.5",
+    "contentful-management": "^5.3.5",
     "core-js": "^2.5.4",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "log4js": "^3.0.6",
     "ng2-file-upload": "^1.3.0",
-    "ngx-bootstrap": "^3.0.1",
+    "ngx-bootstrap": "^3.1.1",
     "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "^6.1.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.1.9",
-    "@angular/language-service": "^6.1.9",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.1",
