--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/pwa": "^0.10.3",
     "@angular/router": "^6.1.10",
+    "@angular/service-worker": "^6.1.10",
     "adm-zip": "^0.4.11",
     "angular": "^1.7.5",
     "angular-contentful-service": "^1.3.2",
@@ -39,8 +40,7 @@
     "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26",
-    "@angular/service-worker": "^6.1.10"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
