--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "adm-zip": "^0.4.11",
     "angular": "^1.7.5",
     "angular-contentful-service": "^1.3.2",
+    "angularfire2": "^5.1.0",
     "bootstrap": "^4.1.3",
     "contentful": "^7.0.5",
     "contentful-management": "^5.3.5",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.7",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "log4js": "^3.0.6",
@@ -44,7 +46,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "^7.0.4",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
     "@types/jasmine": "^2.8.9",
