Cleaning tree before adding Firebase

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.10",
     "@angular/core": "^6.1.10",
+    "@angular/fire": "^5.1.1",
     "@angular/flex-layout": "^6.0.0-beta.16",
     "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.10",
@@ -32,6 +33,7 @@
     "contentful": "^7.0.5",
     "contentful-management": "^5.3.5",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.0",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "log4js": "^3.0.6",
