--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^7.2.5",
     "@angular/platform-browser-dynamic": "^7.2.5",
+    "@angular/platform-server": "^7.2.5",
     "@angular/pwa": "^0.10.3",
     "@angular/router": "^7.2.5",
     "@angular/service-worker": "^7.2.5",
@@ -32,7 +33,7 @@
     "bootstrap": "^4.1.3",
     "contentful": "^7.0.5",
     "contentful-management": "^5.3.5",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.5",
     "firebase": "^5.8.0",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
@@ -42,29 +43,31 @@
     "npm": "^6.4.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.13.2",
     "@angular/cli": "^7.3.2",
     "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "^7.2.5",
-    "@types/jasmine": "^2.8.9",
+    "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
+    "@types/node": "^11.9.4",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~3.2.4",
-    "webpack": "^4.28.1"
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3",
+    "webpack": "^4.29.5"
   }
 }
