--- a/package.json
+++ b/package.json
@@ -5,60 +5,64 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod --aot --vendor-chunk --common-chunk --delete-output-path --build-optimizer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.9",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^7.2.9",
-    "@angular/compiler": "^7.2.9",
-    "@angular/core": "^7.2.9",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.13",
+    "@angular/core": "^7.2.14",
     "@angular/fire": "^5.1.2",
-    "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^7.2.9",
-    "@angular/http": "^7.2.9",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^7.2.9",
-    "@angular/platform-browser-dynamic": "^7.2.9",
-    "@angular/platform-server": "^7.2.9",
-    "@angular/pwa": "^0.10.7",
-    "@angular/router": "^7.2.9",
-    "@angular/service-worker": "^7.2.9",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.14",
+    "@angular/http": "^7.2.14",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/platform-server": "^7.2.14",
+    "@angular/pwa": "^0.13.8",
+    "@angular/router": "^7.2.14",
+    "@ngtools/webpack": "^7.3.8",
     "adm-zip": "^0.4.13",
     "angular": "^1.7.8",
     "angular-contentful-service": "^1.3.2",
     "bootstrap": "^4.3.1",
-    "contentful": "^7.4.3",
-    "contentful-management": "^5.7.0",
+    "contentful": "^7.5.0",
+    "contentful-management": "^5.7.1",
     "core-js": "^2.6.5",
-    "firebase": "^5.9.0",
+    "firebase": "^5.10.0",
     "hoek": "^5.0.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "log4js": "^3.0.6",
     "ng2-file-upload": "^1.3.0",
-    "ngx-bootstrap": "^3.2.0",
+    "ngx-bootstrap": "^3.3.0",
+    "node-gyp": "^4.0.0",
     "npm": "^6.9.0",
-    "popper.js": "^1.14.7",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
+    "popper.js": "^1.15.0",
+    "rxjs": "^6.5.1",
+    "rxjs-compat": "^6.5.1",
+    "source-map-explorer": "^1.8.0",
+    "tar": "^4.4.8",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/cli": "^7.3.6",
-    "@angular/compiler-cli": "^7.2.9",
-    "@angular/language-service": "^7.2.9",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/language-service": "^7.2.14",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^11.11.4",
+    "@types/node": "^11.13.7",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.3.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
@@ -66,8 +70,10 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
-    "tslint": "^5.14.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.2.4",
-    "webpack": "^4.29.6"
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.1"
   }
 }
